/* Vision status message
** 
** Information about the vision.
*/

package de.fumanoids.message;

import "msg_position.proto";
import "msg_fumanoid.proto";

message ObjectPosition {
	enum ObjectType {
		Ball            = 0;
		GoalYellow      = 1;
		GoalBlue        = 2;
		BYBPole         = 3;
		YBYPole         = 4;
		CyanObstacle    = 5;
		MagentaObstacle = 6;
		BlackObstacle   = 7;
		GoalYellowL     = 8;  // Left pole
		GoalBlueL       = 9;
		GoalYellowR     = 10; // right pole
		GoalBlueR       = 11;
		GoalYellowU     = 12; // unknown pole
		GoalBlueU       = 13;
		FieldLineX      = 14;
		FieldLineT      = 15;
		FieldLineL      = 16;
	}

	required ObjectType type     = 1;
	required Position   position = 2;
	optional bool       isUsed   = 3;
	optional string     comment  = 4;
}

message VisionEdge {
	message Edgel {
		required Position  position = 1;
		optional float     dirX     = 2;
		optional float     dirY     = 3;
	}
	
	repeated Edgel edge = 1;
}

message ObjectExtractorStatus {
	repeated ObjectPosition  objectPositions = 1;
	repeated VisionEdge      fieldLines      = 2;
}

message LocalizationInput {
	message VisionData {
		optional int32                  frameNumber           = 1;
		optional int64                  frameTime             = 2;
		optional ObjectExtractorStatus  objectExtractorStatus = 3;
		optional float                  roll                  = 4;
		optional float                  pitch                 = 5;
		optional float                  headAngle             = 6;
		
		optional int32                  forward               = 7;
		optional int32                  sideward              = 8;
		optional int32                  rotation              = 9;
	}
	
	repeated VisionData visionData = 1;
}

message VisionStatus {
	required int32  frameNumber = 1; // number of the processed frame
	optional int64  frameTime   = 2; // time the frame was processed

	optional int32  pitch       = 3; 
	optional int32  roll        = 4; 

	repeated ObjectPosition objectPositions = 5;
}

extend Message {
	optional VisionStatus          vision          = 7;
	optional ObjectExtractorStatus extractorStatus = 8;
}